<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/adapter_store_height"
    android:minHeight="@dimen/adapter_store_height"
    android:background="@color/white"
    android:paddingLeft="@dimen/adapter_store_padding_left">

    <Button
        android:id="@+id/adapter_store_btn"
        android:layout_width="@dimen/adapter_store_btn_width"
        android:layout_height="@dimen/adapter_store_btn_width"
        android:layout_centerVertical="true"
        android:background="@drawable/adapter_shopcar_btn_sel"/>

    <TextView
        android:id="@+id/adapter_store_txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ellipsize="end"
        android:text="@string/test"
        android:textSize="@dimen/activity_buy_txt_info"
        android:textColor="@color/black_adapter_little_name"
        android:layout_toRightOf="@id/adapter_store_btn"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/store_money_head"
        android:paddingLeft="@dimen/adapter_store_name_padding_right"
        android:paddingRight="@dimen/adapter_store_name_padding_right" />

    <TextView
        android:id="@+id/store_fare_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_yuan"
        android:textSize="@dimen/activity_buy_txt_info"
        android:textColor="@color/black_adapter_little_name"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/adapter_store_money_margin_right" />


    <TextView
        android:id="@+id/adapter_store_txt_fare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_second"
        android:textSize="@dimen/activity_buy_txt_info"
        android:textColor="@color/black_adapter_little_name"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/store_fare_end" />

    <TextView
        android:id="@+id/store_fare_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adapter_store_fare_head"
        android:textSize="@dimen/activity_buy_txt_info"
        android:textColor="@color/black_adapter_little_name"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/adapter_store_txt_fare" />

    <TextView
        android:id="@+id/adapter_store_txt_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="@dimen/activity_buy_txt_info"
        android:textColor="@color/black_adapter_little_name"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/store_fare_head"
        android:layout_marginRight="@dimen/adapter_store_fare_maring_right" />

    <TextView
        android:id="@+id/store_money_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adapter_store_money_head"
        android:textSize="@dimen/activity_buy_txt_info"
        android:textColor="@color/black_adapter_little_name"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/adapter_store_txt_money" />

</RelativeLayout>