<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg">

    <include
        android:id="@+id/regist_head"
        layout="@layout/head_normal" />

    <RelativeLayout
        android:id="@+id/regist_rl_phone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/login_phone_rl_height"
        android:layout_below="@id/regist_head"
        android:layout_marginLeft="@dimen/login_phone_margin_left"
        android:layout_marginRight="@dimen/login_phone_margin_left"
        android:layout_marginTop="@dimen/login_phone_margin_top"
        android:background="@drawable/login_edt_bg">

        <com.bm.mspt.view.ClearEditText
            android:id="@+id/regist_edt_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/regist_phone_hint"
            android:padding="3dp"
            android:inputType="phone"
            android:maxLength="11"
            style="@style/login_txt"
            android:background="@null" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/regist_rl_verify"
        android:layout_width="@dimen/regist_verify_rl_width"
        android:layout_height="@dimen/login_phone_rl_height"
        android:layout_below="@id/regist_rl_phone"
        android:layout_marginLeft="@dimen/login_phone_margin_left"
        android:layout_marginTop="@dimen/login_password_margin_top"
        android:background="@drawable/login_edt_bg">

        <com.bm.mspt.view.ClearEditText
            android:id="@+id/regist_edt_verify"
            style="@style/login_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/regist_phone_verify"
            android:inputType="number"
            android:maxLength="6"
            android:padding="3dp"
            android:background="@null" />
    </RelativeLayout>

    <Button
        android:id="@+id/regist_btn_verify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_phone_rl_height"
        android:layout_alignRight="@id/regist_rl_phone"
        android:layout_below="@id/regist_rl_phone"
        android:layout_marginLeft="@dimen/regist_verify_btn_margin_left"
        android:layout_toRightOf="@id/regist_rl_verify"
        android:layout_marginTop="@dimen/login_password_margin_top"
        android:background="@drawable/regist_verify_btn"
        android:text="@string/regist_verify"
        android:textSize="@dimen/regist_verify_btn_txt"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/regist_rl_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_phone_rl_height"
        android:layout_below="@id/regist_rl_verify"
        android:layout_marginLeft="@dimen/login_phone_margin_left"
        android:layout_marginRight="@dimen/login_phone_margin_left"
        android:layout_marginTop="@dimen/login_password_margin_top"
        android:background="@drawable/login_edt_bg">

        <com.bm.mspt.view.ClearEditText
            android:id="@+id/regist_edt_password"
            style="@style/login_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/regist_phone_password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:padding="3dp"
            android:background="@null" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/regist_rl_password_again"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_phone_rl_height"
        android:layout_below="@id/regist_rl_password"
        android:layout_marginLeft="@dimen/login_phone_margin_left"
        android:layout_marginRight="@dimen/login_phone_margin_left"
        android:layout_marginTop="@dimen/login_password_margin_top"
        android:background="@drawable/login_edt_bg">

        <com.bm.mspt.view.ClearEditText
            android:id="@+id/regist_edt_password_again"
            style="@style/login_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/regist_phone_password_again"
            android:inputType="textPassword"
            android:maxLength="12"
            android:padding="3dp"
            android:background="@null" />
    </RelativeLayout>

    <Button
        android:id="@+id/regist_btn_regist"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_login_height"
        android:layout_below="@id/regist_rl_password_again"
        android:layout_marginTop="@dimen/regist_regist_margin_top"
        android:layout_marginLeft="@dimen/login_login_margin_left"
        android:layout_marginRight="@dimen/login_login_margin_left"
        android:text="@string/regist_title"
        android:textSize="@dimen/regist_regist_txt"
        android:textColor="@color/white"
        android:background="@drawable/login_btn_bg" />

    <Button
        android:id="@+id/regist_btn_agreement"
        android:layout_width="@dimen/regist_agreement_btn_width_height"
        android:layout_height="@dimen/regist_agreement_btn_width_height"
        android:background="@drawable/regist_agreement_sel"
        android:layout_below="@id/regist_rl_password_again"
        android:layout_marginTop="@dimen/regist_agreement_margin_top"
        android:layout_marginLeft="@dimen/login_login_margin_left" />

    <TextView
        android:id="@+id/regist_agreement_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/regist_btn_agreement"
        android:layout_alignBaseline="@id/regist_btn_agreement"
        android:text="@string/agreement_head"
        android:textColor="@color/regist_agreement_head"
        android:layout_marginLeft="@dimen/regist_agreement_head_margin_left" />

    <TextView
        android:id="@+id/regist_agreement_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/regist_agreement_head"
        android:layout_alignBaseline="@id/regist_btn_agreement"
        android:text="@string/agreement_txt"
        android:textColor="@color/regist_agreement_txt" />

</RelativeLayout>